--- a/index.html
+++ b/index.html
@@ -164,37 +164,54 @@
                             </form>
                         </div>
                     </div>
-            </div>
+                </div>
             </div>
         </div>
         <div id="pick-del">
-                <p>Would you prefer pickup or delivery?</p>
-                <form>
+            <p>Would you prefer pickup or delivery?</p>
+            <form>
 
-        
-                                <input id="option2" name="options" type="radio">Pick up
-                                </label>
-                                <div class="visible-pickup">
-                                        <div id="places-autocomplete-wrap">
-                                        <input class="form-control gtm-form-checkout" id="places-autocomplete" placeholder="Enter your location" type="search" autocomplete="off">
-                                        </div>
-                </form>
-                <p></p>
+
+                <input id="option2" name="options" type="radio">Pick up
+                </label>
+                <div class="visible-pickup">
+                    <div id="places-autocomplete-wrap">
+                        <input class="form-control gtm-form-checkout" id="places-autocomplete"
+                            placeholder="Enter your location" type="search" autocomplete="off">
+                    </div>
+            </form>
+            <p></p>
+        </div>
+        <div class="container">
+            <div class="contact">
+                <h3><strong>CONTACT US</strong></h3><br>
+                <div class="row">
+                    <div class="col-lg-2,col-md-3">
+                        <form>
+                            <input type="text" class="form-control" id="Name" placeholder="NAME"><br>
+                            <input type="text" class="form-control" id="Email" placeholder="EMAIL"><br>
+                            <textarea name="message" id="message" cols="45" rows="10" placeholder="COMMENT"></textarea><br>
+                            <input type="submit" class="btn btn-success"></button>
+                        </form>
+                        </div>
+                        <div class="col-lg-2,col-md-3">
+                        <p>E-MAIL</p>
+                        <p>@murimimaureen8@gmail.com</p>
+                        <hr>
+                        <p>TELEPHONE</p>
+                        <p>0799280333</p>
+                        <hr>
+                        <p>VISIT</p>
+                        <p>NGONG-LANE PLAZA</p>
+                        <P>NGONG,NAIROBI</P>
+                    </div>
+                    </div>
+                </div>
             </div>
-            <h3><strong>CONTACT US</strong></h3>
-            <p>E-MAIL</p>
-            <p>@murimimaureen8@gmail.com</p><hr>
-            <p>TELEPHONE</p>
-            <p>0799280333</p>
-            <hr>
-            <p>VISIT</p>
-            <p>NGONG-LANE PLAZA</p>
-            <P>NGONG,NAIROBI</P>
-
-    </div>
-
-    <script src="js/jquery-3.4.1.js"></script>
-    <script src="js/scripts.js"></script>
+        </div>
+<hr/>
+        <script src="js/jquery-3.4.1.js"></script>
+        <script src="js/scripts.js"></script>
 </body>
 
 </html>
