add contact page

--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
 <body>
     <div class="container">
         <h1><b>PAZZI PER LA PIZZA</b></h1>
-        <p>PIZZACHU</p>
-        <img class="back" src="images/logo.jpg" alt="Pizza making">
-        <p>I CHEESE YOU</p>
+        <div class="dropdown">
+        <p style="text-align: center;"><strong>PIZZACHU</strong></p>
+        <div class="dropdown-img">
+        <img src="images/pizza.jpg" alt="Pizza making" width="1100vh">
+    </div>
+        <p style="text-align: center;"><strong>I CHEESE YOU</strong></p>
+    </div>
         <ul>
             <li><a href="#home">HOME</a></li>
             <li><a href="#menu">MENU</a></li>
@@ -179,11 +183,10 @@
                 </div>
             </div>
         </div>
-        <div class=row>
+            <section>
             <div id="pick-del">
                 <p>Would you prefer pickup or delivery?</p>
                 <div class="btn-group" data-toggle="button">
-                    <input type="hidden" value="✓">
                     <label class="btn-success form-control">Pick-up</label>
                     <label class="btn-primary form-control">Delivery </label>
                 </div>
@@ -199,6 +202,7 @@
                 </form>
             </div>
         </div>
+    </section>
         <p></p>
 
 
