add button for checkout

--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
                                     <option value="pepper">pepper</option>
                                 </select>
                                 <br>
-                                <label style="text-align: center;" class="btn-success form-control">Proceed to
-                                    Pay</label>
+                                <label style="text-align: center;" class="btn-success form-control">Add To Cart</label>
                             </form>
                         </div>
                     </div>
@@ -174,8 +173,7 @@
                                     <option value="pepper">pepper</option>
                                 </select>
                                 <br>
-                                <label style="text-align: center;" class="btn-success form-control">Proceed to
-                                    Pay</label>
+                                <label style="text-align: center;" class="btn-success form-control">Add to Cart</label>
                             </form>
                         </div>
                     </div>
