--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
                                     <option value="pepper">pepper</option>
                                 </select>
                                 <br>
-                                <label style="text-align: center;" class="btn-success form-control">Proceed to
-                                    Pay</label>
+                                <label style="text-align: center;" class="btn-success form-control">Add to Cart</label>
                             </form>
                         </div>
                     </div>
@@ -97,8 +96,7 @@
                                     <option value="pepper">pepper</option>
                                 </select>
                                 <br>
-                                <label style="text-align: center;" class="btn-success form-control">Proceed to
-                                    Pay</label>
+                                <label style="text-align: center;" class="btn-success form-control">Add to Cart</label>
                             </form>
                         </div>
                     </div>
@@ -200,19 +198,9 @@
             </div>
         </div>
     </section>
-        <p></p>
-
-
-
-
-
-
-    </div>
     <div class="container">
         <div class="contact">
             <h3><strong>CONTACT US</strong></h3><br>
-            <div class="row">
-                <div class="col-lg-2,col-md-3">
                     <form>
                         <input type="text" class="form-control" id="Name" placeholder="NAME"><br>
                         <input type="text" class="form-control" id="Email" placeholder="EMAIL"><br>
@@ -220,7 +208,6 @@
                         <input type="submit" class="btn btn-success"></button>
                     </form>
                 </div>
-                <div class="col-lg-2,col-md-3">
                     <p>TELEPHONE</p>
                     <p>0799280333</p>
                     <hr>
@@ -233,9 +220,8 @@
         </div>
     </div>
     </div>
-    <hr />
+    <hr/>
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/scripts.js"></script>
 </body>
-
 </html>
