--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <p>Smoked Ham, Ground Beef, Pepperoni, Italian Sausage and Chicken</p>
                             <p class="order"><b>ORDER!!!</b></p>
                             <form>
-                                <select class="form-control" placeholder="choose size">
+                                <select id="size" class="form-control" placeholder="choose size">
                                     <option value="">Choose size</option>
                                     <option value="small">Small</option>
                                     <option value="medium">Medium</option>
@@ -44,7 +44,7 @@
                                 </select>
                             </form> <br>
                             <form>
-                                <select class="form-control" placeholder="Choose crust">
+                                <select id="crust" class="form-control" placeholder="Choose crust">
                                     <option value="">Choose crust</option>
                                     <option value="crispy">Crispy</option>
                                     <option value="gluten free">Gluten free</option>
@@ -52,7 +52,7 @@
                                 </select>
                             </form> <br>
                             <form>
-                                <select class="form-control" placeholder="Extra toppings">
+                                <select id="toppings" class="form-control" placeholder="Extra toppings">
                                     <option value="">Choose extra toppings</option>
                                     <option value="">Extra cheese</option>
                                     <option value="Bacon">Bacon</option>
@@ -73,7 +73,7 @@
                             </p>
                             <p class="order"><b>ORDER!!!</b></p>
                             <form>
-                                <select class="form-control" placeholder="choose size">
+                                <select id="size" class="form-control" placeholder="choose size">
                                     <option value="">Choose size</option>
                                     <option value="small">Small</option>
                                     <option value="medium">Medium</option>
@@ -81,7 +81,7 @@
                                 </select>
                             </form> <br>
                             <form>
-                                <select class="form-control" placeholder="Choose crust">
+                                <select id="crust" class="form-control" placeholder="Choose crust">
                                     <option value="">Choose crust</option>
                                     <option value="crispy">Crispy</option>
                                     <option value="gluten free">Gluten free</option>
@@ -89,7 +89,7 @@
                                 </select>
                             </form> <br>
                             <form>
-                                <select class="form-control" placeholder="Extra toppings">
+                                <select id="toppings" class="form-control" placeholder="Extra toppings">
                                     <option value="">Choose extra toppings</option>
                                     <option value="">Extra cheese</option>
                                     <option value="Bacon">Bacon</option>
@@ -109,15 +109,15 @@
                             <p>Shredded Ham,Mozarella and Pineapple</p>
                             <p class="order"><b>ORDER!!!</b></p>
                             <form>
-                                <select id="xx" class="form-control" placeholder="choose size">
-                                    <option value="">Choose size</option>
+                                <select id="size" class="form-control" placeholder="choose size">
+                                    <option value="size">Choose size</option>
                                     <option value="small">Small</option>
                                     <option value="medium">Medium</option>
                                     <option value="large">Large</option>
                                 </select>
                             </form> <br>
                             <form>
-                                <select class="form-control" placeholder="Choose crust">
+                                <select id="crust"  class="form-control" placeholder="Choose crust">
                                     <option value="">Choose crust</option>
                                     <option value="crispy">Crispy</option>
                                     <option value="gluten free">Gluten free</option>
@@ -125,7 +125,7 @@
                                 </select>
                             </form> <br>
                             <form>
-                                <select class="form-control" placeholder="Extra toppings">
+                                <select id="toppings" class="form-control" placeholder="Extra toppings">
                                     <option value="">Choose extra toppings</option>
                                     <option value="">Extra cheese</option>
                                     <option value="Bacon">Bacon</option>
@@ -146,7 +146,7 @@
                                 and Oregano on yourchoice of base, garnished with Mint Yoghurt and Lemon wedge.</p>
                             <p class="order"><b>ORDER!!!</b></p>
                             <form>
-                                <select class="form-control" placeholder="choose size">
+                                <select id="size" class="form-control" placeholder="choose size">
                                     <option value="">Choose size</option>
                                     <option value="small">Small</option>
                                     <option value="medium">Medium</option>
@@ -155,7 +155,7 @@
                             </form>
                             <br>
                             <form>
-                                <select class="form-control" placeholder="Choose crust">
+                                <select id="crust" class="form-control" placeholder="Choose crust">
                                     <option value="">Choose crust</option>
                                     <option value="crispy">Crispy</option>
                                     <option value="gluten free">Gluten free</option>
@@ -164,7 +164,7 @@
                             </form>
                             <br>
                             <form>
-                                <select class="form-control" placeholder="Extra toppings">
+                                <select id="toppings" class="form-control" placeholder="Extra toppings">
                                     <option value="">Choose extra toppings</option>
                                     <option value="">Extra cheese</option>
                                     <option value="Bacon">Bacon</option>
