adding total and checkout formula

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                     <option value="pepper">pepper</option>
                                 </select>
                                 <br>
-                                <label style="text-align: center;" class="btn-success form-control">Add to Cart</label>
+                                <label style="text-align: center;" id="btn-addtocart" class="btn-success form-control">Add to Cart</label>
                             </form>
                         </div>
                     </div>
@@ -96,7 +96,7 @@
                                     <option value="pepper">pepper</option>
                                 </select>
                                 <br>
-                                <label style="text-align: center;" class="btn-success form-control">Add to Cart</label>
+                                <label style="text-align: center;" id="btn-addtocart" class="btn-success form-control">Add to Cart</label>
                             </form>
                         </div>
                     </div>
@@ -132,7 +132,7 @@
                                     <option value="pepper">pepper</option>
                                 </select>
                                 <br>
-                                <label style="text-align: center;" class="btn-success form-control">Add To Cart</label>
+                                <label style="text-align: center;" id="btn-addtocart" class="btn-success form-control">Add To Cart</label>
                             </form>
                         </div>
                     </div>
@@ -171,7 +171,7 @@
                                     <option value="pepper">pepper</option>
                                 </select>
                                 <br>
-                                <label style="text-align: center;" class="btn-success form-control">Add to Cart</label>
+                                <label style="text-align: center;"id="btn-addtocart" class="btn-success form-control">Add to Cart</label>
                             </form>
                         </div>
                     </div>
