--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <div class="container">
         <h1><b>PAZZI PER LA PIZZA</b></h1>
         <div class="background">
-        <p style="text-align: center;"><strong>PIZZACHU</strong></p>
-        <img src="images/pizza.jpg" alt="Pizza making" width="1100vh">
-    </div>
+            <p style="text-align: center;"><strong>PIZZACHU</strong></p>
+            <img src="images/pizza.jpg" alt="Pizza making" width="1100vh">
+        </div>
         <p style="text-align: center;"><strong>I CHEESE YOU</strong></p>
     </div>
-        <ul>
-            <li><a href="#home">HOME</a></li>
-            <li><a href="#menu">MENU</a></li>
-            <li><a href="#contact">CONTACT US</a></li>
-        </ul>
+    <ul>
+        <li><a href="#home">HOME</a></li>
+        <li><a href="#menu">MENU</a></li>
+        <li><a href="#contact">CONTACT US</a></li>
+    </ul>
     </div><br><br><br><br>
     <div class="container-fluid">
         <div id="menu">
@@ -59,7 +59,8 @@
                                     <option value="pepper">pepper</option>
                                 </select>
                                 <br>
-                                <label style="text-align: center;" id="btn-addtocart" class="btn-success form-control">Add to Cart</label>
+                                <label style="text-align: center;" id="btn-addtocart"
+                                    class="btn-success form-control">Add to Cart</label>
                             </form>
                         </div>
                     </div>
@@ -96,7 +97,8 @@
                                     <option value="pepper">pepper</option>
                                 </select>
                                 <br>
-                                <label style="text-align: center;" id="btn-addtocart" class="btn-success form-control">Add to Cart</label>
+                                <label style="text-align: center;" id="btn-addtocart"
+                                    class="btn-success form-control">Add to Cart</label>
                             </form>
                         </div>
                     </div>
@@ -117,7 +119,7 @@
                                 </select>
                             </form> <br>
                             <form>
-                                <select id="crust"  class="form-control" placeholder="Choose crust">
+                                <select id="crust" class="form-control" placeholder="Choose crust">
                                     <option value="">Choose crust</option>
                                     <option value="crispy">Crispy</option>
                                     <option value="gluten free">Gluten free</option>
@@ -132,7 +134,8 @@
                                     <option value="pepper">pepper</option>
                                 </select>
                                 <br>
-                                <label style="text-align: center;" id="btn-addtocart" class="btn-success form-control">Add To Cart</label>
+                                <label style="text-align: center;" id="btn-addtocart"
+                                    class="btn-success form-control">Add To Cart</label>
                             </form>
                         </div>
                     </div>
@@ -171,57 +174,61 @@
                                     <option value="pepper">pepper</option>
                                 </select>
                                 <br>
-                                <label style="text-align: center;"id="btn-addtocart" class="btn-success form-control">Add to Cart</label>
+                                <label style="text-align: center;" id="btn-addtocart"
+                                    class="btn-success form-control">Add to Cart</label>
                             </form>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-            <section>
-            <div id="pick-del">
-                <p>Would you prefer pickup or delivery?</p>
-                <div class="btn-group" data-toggle="button">
-                    <label class="btn-success form-control">Pick-up</label>
-                    <label class="btn-primary form-control">Delivery </label>
-                </div>
-                <hr>
-                <p class="text-center">Where are we delivering to?</p>
+        <section>
+            <div id="Checkout">
+                <div id="pick-del">
+                    <p>Would you prefer pickup or delivery?</p>
+                    <div class="btn-group" data-toggle="button">
+                        <label class="btn-success form-control">Pick-up</label>
+                        <p class="pick">Your order will be ready for pick-up in 15 minutes.</p>
+                        <label class="btn-primary form-control">Delivery </label>
+                        <p class="del">Where are we delivering to?</p>
+                        <form>
+                            <select class="form-control" placeholder="Choose Location">
+                                <option value="location">Choose Location</option>
+                                <option value="location">Spring Valley</option>
+                                <option value="location">Prestige</option>
+                                <option value="location">Other</option>
+                            </select>
+                        </form>
+                    </div>
+        </section>
+        <div class="container-fluid">
+            <div class="contact">
+                <h3><strong>CONTACT US</strong></h3><br>
                 <form>
-                    <select class="form-control" placeholder="Choose Location">
-                        <option value="location">Choose Location</option>
-                        <option value="location">Spring Valley</option>
-                        <option value="location">Prestige</option>
-                        <option value="location">Other</option>
-                    </select>
+                    <input type="text" class="form-control" id="Name" placeholder="NAME"><br>
+                    <input type="text" class="form-control" id="Email" placeholder="EMAIL"><br>
+                    <textarea name="message" id="message" cols="45" rows="10" placeholder="COMMENT"></textarea><br>
+                    <input type="submit" class="btn btn-success"></button>
                 </form>
             </div>
-        </div>
-    </section>
-    <div class="container">
-        <div class="contact">
-            <h3><strong>CONTACT US</strong></h3><br>
-                    <form>
-                        <input type="text" class="form-control" id="Name" placeholder="NAME"><br>
-                        <input type="text" class="form-control" id="Email" placeholder="EMAIL"><br>
-                        <textarea name="message" id="message" cols="45" rows="10" placeholder="COMMENT"></textarea><br>
-                        <input type="submit" class="btn btn-success"></button>
-                    </form>
-                </div>
-                    <p>TELEPHONE</p>
-                    <p>0799280333</p>
-                    <hr>
-                    <p>VISIT</p>
-                    <p>MARKET MANSION</p>
-                    <P>00200,NAIROBI</P>
-                    <img src="images/visit.jpg" alt="Visit store Location at Market Mansion">
-                </div>
-            </div>
+            <p>EMAIL</p>
+            <p>info@pazzalapizza.com</p>
+            <hr>
+            <p>TELEPHONE</p>
+            <p>0799280333</p>
+            <hr>
+            <p>VISIT</p>
+            <p>MARKET MANSION</p>
+            <P>00200,NAIROBI</P>
+            <img src="images/visit.jpg" alt="Visit store Location at Market Mansion">
         </div>
     </div>
     </div>
-    <hr/>
+    </div>
+    </div>
+    <hr />
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/scripts.js"></script>
 </body>
+
 </html>
